  compilieren

obcm 1.07b11 (16.06.2013):
-------------------------
- Patch from dg4mfn: 
  memalloc fix for GCC 4.x

obcm 1.07b12 (03.07.2013):
-------------------------
- Additional change memalloc
- makefile for Linux now with m32 option for compiling with gcc 64bit system
- Patch OE5HPM: beseitigt Abstuerze bei "fs h" und "mail h" in help.cpp
  bei Verwendung von GCC 4.x Compiler unter Linux




dringend TODO fuer naechste Version:
- gelegentliche Abstuerze beim Ausloggen von Stationen untersuchen und
  abstellen
- Bug reject.bcm: wird ein Mailboxrufzeichen angegeben und steht dies in
  der Rejectliste mit "R @call" so wird es korrekt rejected, ist die Mailbox
  hingegen eine Homebbs und wird nicht explizit angegeben, so wird die
  Mail akzeptiert


TODO-Liste fuer spaetere Versionen:
- speech.bcm: fehlt eine Zeile, dann default Datei erstellen
- messages.*: Konsistenz-Pruefung gegen segment faults bei Tippfehlern!
- Lifetime bei Mails aus der Zukunft (-> DB0II)
- Batchausgaben nicht sichtbar bei Runutils
- ggf. auch bei U in fwd.bcm Forward von WPROT-Bulletins?
- ohne gestartetem DNS-Client Service unter Windows Absturz der Mailbox
- bei RLI-Diebox-Fwd kommt es nach Neustart der Mailboxsoft von DB0ZDF zu 
  Usermail-Dubletten, Ursache bislang unbekannt
- BID-Datenbank-Eintraege nach TRANSFER bzw. CONVERT: hier steht immer
  die Rubrik zum Zeitpunkt der BID-Aufnahme - in Ordnung?
- ACTIVE-Routing:
   - Phantom-Calls (=Partner ohne ACTIVE ROUTING) minus 15 Stunden 
     fixem Aging
   - ist direkter Fwd-Partner kein Active Routing Partner mehr (z.B. wegen
     kurzfristigem Ausfall), dann auch bei anderen Boxen wo dieser Partner
     Active-Routing-Partner waere, das Active Routing ausschalten? Kann aber
     zu Pingpong mit Nachbarbox fuehren, macht das Sinn?
- haengende HTTP-Sessions bei Gebrauch des IE, wenn dort sehr schnell 
  nacheinander "Refresh" angeklickt wird, bei Firefox+Opera scheint dies 